syntax="proto3";
package net.sopod.soim.data.msg.user;

option java_multiple_files = false;
option java_outer_classname = "UserMsg";
option java_package = "net.sopod.soim.data.msg.user";

message UserInfo {
  int64 uid = 1;
  string account = 2;
  string nickname = 3;
  bool online = 4;
}