syntax = "proto3";

option java_multiple_files = true;

package net.sopod.soim.logic.api.friend.search;

service AccountSearchService {

  // 关键字搜索用户
  rpc searchAccountLikely(ReqAccountSearch) returns (ResAccountSearch) {}

}

message ReqAccountSearch {
  string keyword = 1;
}

message ResAccountSearch {
  repeated AccountInfo accounts = 1;
}

message AccountInfo {
  int64 uid = 1;
  string account = 2;
  string nickname = 3;
}
